[tool.poetry]
name = "backport-pull-request-action"
version = "1.0.0"
description = "A GitHub Action to backport Pull Requests"
authors = ["Björn Ricks <bjoern.ricks@greenbone.net>"]
license = "GPLv3+"
packages = [
    { include = "action" },
]

[tool.poetry.dependencies]
python = "^3.9"
tomli = "<2.0"
pontos = "^22.1.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
autohooks = "^21.7.0"
pylint = "^2.12.2"
autohooks-plugin-pylint = "^21.6.0"
autohooks-plugin-black = "^21.12.0"

[tool.poetry.scripts]
backport-pull-request = 'action.backport:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
