[tool.poetry]
name = "backport-pull-request-action"
version = "1.0.0"
description = "A GitHub Action to backport Pull Requests"
authors = ["Björn Ricks <bjoern.ricks@greenbone.net>"]
license = "GPLv3+"
packages = [
    { include = "action" },
]

[tool.poetry.dependencies]
python = "^3.9"
tomli = ">=1.0"
pontos = ">=23.2.1"

[tool.poetry.dev-dependencies]
autohooks = ">=21.7.0"
autohooks-plugin-pylint = ">=21.6.0"
autohooks-plugin-black = ">=21.12.0"
autohooks-plugin-isort = ">=22.8.0"

[tool.poetry.scripts]
backport-pull-request = 'action.backport:main'

[tool.black]
line-length = 80
target-version = ['py39', 'py310']
exclude = '''
/(
    \.git
  | \.venv
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.isort]
profile = "black"
line_length = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
