[project]
name = "generate-dependabot-config-action"
version = "0.1.0"
description = "Generate a dependabot config file."
authors = [
    {name = "Henning Sprang",email = "henning.sprang@greenbone.net"}
]
license = "GPLv3+"
readme = "README.md"
#requires-python = "^3.12"

packages = [
    { include = "action" },
]

#dependencies = [
#    "jinja2 (>=3.1.6,<4.0.0)"
#]

[tool.poetry.dependencies]
python = "^3.12"
#pontos = ">=23.7.4"
#jinja2 = ">=3.1.6,<4.0.0"
jinja2 = "^3.1.6"

[tool.poetry.scripts]
generate-dependabot-config = 'action.dependabot_config:main'

[tool.black]
line-length = 80
target-version = ["py311", "py312", "py313"]
exclude = '''
/(
    \.git
  | \.venv
  | \.github
  | \.vscode
  | \.idea
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.isort]
profile = "black"
line_length = 80

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
