[tool.poetry]
name = "trigger-workflow-action"
version = "1.0.0"
description = "A GitHub Action to trigger a workflow run"
authors = ["Björn Ricks <bjoern.ricks@greenbone.net>"]
license = "GPLv3+"
packages = [
    { include = "action" },
]

[tool.poetry.dependencies]
python = "^3.10"
pontos = ">=22.12.3"

[tool.poetry.group.dev.dependencies]
autohooks-plugin-pylint = ">=22.8.0"
autohooks-plugin-isort = ">=22.8.0"
autohooks-plugin-black = ">=22.8.0"

[tool.poetry.scripts]
trigger-workflow = 'action.trigger:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ["py310", "py311", "py312", "py313", "py314"]
exclude = '''
/(
    \.git
  | \.venv
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.isort]
profile = "black"
line_length = 80

[tool.autohooks]
mode = "poetry"
pre-commit = ['autohooks.plugins.black', 'autohooks.plugins.isort', 'autohooks.plugins.pylint']
