[tool.poetry]
name = "test-python-project"
version = "0.1.0"
description = "A Python project for testing Python based actions"
authors = ["Your Name <you@example.com>"]
license = ""
packages = [{include = "project"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
ruff = "^0.5.2"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
